<resources>
    <string name="app_name">Penny</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="goal_name">Goal Name</string>
    <string name="log_out">Log Out</string>
    <string name="goal_cost">Cost</string>
    <string name="add_goal">Add Goal</string>
    <string name="birthday">Birthday (mm/dd/yyyy)</string>
    <string name="end_date_hint">End Date (mm/dd/yyyy)</string>
    <string name="completed_goals">Completed Goals</string>
    <string name="completed_badges">Completed Badges</string>
    <string name="in_progress_badges">In Progress Badges</string>
    <string name="or">OR</string>
    <string name="parent_sign_up">Parent Sign Up</string>
    <string name="parent_question">Are you a parent? Sign up here!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="next">Next</string>
    <string name="personal_info">Personal Information</string>
    <string name="account_info">Account Information</string>
    <string name="child_code">Child Code</string>
    <string name="goals_in_progress">Goals in Progress</string>
    <string name="goals_completed">Goals Completed</string>
    <string name="pending_requests">Pending Requests</string>
    <string name="child_name">Child Name</string>
    <string name="needs_parent_info_1">You must link a parent account to use the app.</string>
    <string name="needs_parent_info_2">Give your parent/guardian this code to enter when they sign up:</string>
    <string name="needs_parent_info_3">After your parent signs up, enter their code below.</string>
    <string name="parent_code">Parent Code</string>
    <string name="submit">Submit</string>
    <string name="add_goal_title">Add a New Goal!</string>
    <string name="image_info">Take or upload an image below:</string>
    <string name="verify_child_info_1">Give your child this code to enter to link their account:</string>
    <string name="verify_child_info_2">You can also access this code at any time in your profile.</string>
    <string name="dismiss">Dismiss</string>
    <string name="hidden_password">**********</string>
    <string name="account_code">Account Code: </string>
    <string name="edit">Edit</string>
    <string name="bank_info">Bank Information</string>
    <string name="refer_friend">Refer a Friend</string>
    <string name="parents">Parents</string>
    <string name="in_progress_goals">In Progress Goals</string>
    <string name="confirm_remove_bank">Are you sure you want to remove this bank account?</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm">Confirm</string>
    <string name="edit_password">Edit Password</string>
    <string name="bank_accounts">Bank Accounts</string>
    <string name="add_bank_info">Click the button below to link a bank account.</string>
    <string name="add_goal_info">Click the button below to add a goal.</string>
    <string name="verification_status">Verification Status:</string>
    <string name="remove">Remove</string>
    <string name="bank_name">Bank Name</string>
    <string name="hidden_account_number">****</string>
    <string name="pending">Pending</string>
    <string name="deposit">Make a Deposit</string>
    <string name="edit_goal">Edit Goal</string>
    <string name="date_completed">Date Completed:</string>
    <string name="total_cost">Total Cost:</string>
    <string name="transaction_history">Transaction History</string>
    <string name="auto_pay">Set Up Auto Pay</string>
    <string name="amount_saved">Amount Saved:</string>
    <string name="edit_email">Edit Email</string>
    <string name="edit_username">Edit Username</string>
    <string name="edit_name">Edit Name</string>
    <string name="middle_initial">Middle Initial</string>
    <string name="edit_profile_pic">Change Profile Picture</string>
    <string name="remove_bank_title">Remove Bank Account</string>
    <string name="verified">Verified</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="add_a_bank">Add a Bank</string>
    <string name="legal_name">Legal Name</string>
    <string name="routing_number">Routing Number</string>
    <string name="account_number">Account Number</string>
    <string name="confirm_account_number">Confirm Account Number</string>
    <string name="add_bank_account">Add Bank Account</string>
    <string name="status_title">Status:</string>
    <string name="edit_goal_name">Edit Goal Name</string>
    <string name="cancel_goal">Cancel Goal</string>
    <string name="badge_name">Badge Name</string>
    <string name="badge_description">Badge Description</string>
    <string name="earned_on">Earned On:</string>
    <string name="close">Close</string>
    <string name="request_type">Request Type</string>
    <string name="request_details">Request Details</string>
    <string name="approve">Approve</string>
    <string name="deny">Deny</string>
    <string name="congrats">Congratulations!</string>
    <string name="earned_badges_info">You earned the following badges:</string>
    <string name="great">Great!</string>
    <string name="what_now">What do I do now?</string>
    <string name="end_date">End Date:</string>
    <string name="no_pending_requests">No Pending Requests to Display</string>
    <string name="no_in_progress_goals">No In Progress Goals to Display</string>
    <string name="no_completed_goals">No Completed Goals to Display</string>
    <string name="add_child">Link Another Child</string>
    <string name="cancel">Cancel</string>
    <string name="set_up_payment">Set Up Recurring Payments</string>
    <string name="repeat">Repeat every</string>
    <string name="delete_bank">Delete Bank</string>
    <string name="per_day"> per day</string>
    <string name="purchase_goal">Purchase Goal</string>
    <string name="auto_pay_amount">Payment Amount</string>
    <string name="edit_end_date">Edit Goal End Date</string>
    <string name="edit_goal_image">Change Goal Image</string>
    <string name="add_parent">Link Another Parent</string>
    <string name="approval_info">Approval Status Info</string>
    <string name="approval">Parent Approval</string>
    <string name="unlink_child">Unlink Child</string>
    <string name="child_settings">Child Settings</string>
    <string name="parent_settings">Parent Settings</string>
    <string name="add_allowance">Add Allowance</string>
    <string name="edit_allowance">Edit Allowance</string>
    <string name="cancel_allowance">Cancel Allowance</string>
    <string name="allowance_manager">Allowance Manager</string>
    <string name="allowance_amount">Allowance Amount</string>
    <string name="allowance_details">Allowance Details</string>
    <string name="cancel_allowance_confirm">Are you sure you want to cancel this allowance?</string>
    <string name="transfer_to_bank">Transfer to Bank</string>
    <string name="transfer_to_goal">Transfer to Goal</string>
    <string name="cancel_goal_money_title">What do you want to do with the money you saved towards this goal?</string>
    <string name="no_completed_goals_child">No Completed Goals Yet. Keep Saving!</string>
    <string name="no_completed_badges">No Completed Badges Yet. Keep Saving!</string>
    <string name="no_in_progress_badges">You Completed All the Badges! Great Job!</string>
    <string name="refer_friend_info">Enter your friend\'s email below to invite them to use Penny!</string>
    <string name="inviter_info">Did a friend invite you to use Penny? Enter their code below!</string>
    <string name="inviter_code">Inviter Code</string>
    <string name="allowance_info">Allowance Information</string>
</resources>
